--- a/portal/src/main/webapp/theme/basic/css/reset-text-grid.css
+++ b/portal/src/main/webapp/theme/basic/css/reset-text-grid.css
@@ -135,8 +135,12 @@ fieldset {
 	margin-bottom: 20px;
 }
 
-
-table { border-collapse: separate; border-spacing: 0.2em; text-align: left;  }
+/* tables still need 'cellspacing="0"' in the markup */
+/*table {*/
+	/*border-collapse: collapse;*/
+	/*border-spacing: 0;*/
+/*}*/
+table { border-collapse: separate; border-spacing: 1px; text-align: left;  }
 th { font-size: 1.1em; font-weight: normal; background: #e1e1e1; }
 th, td { padding: 0.4em 0.9em 0.4em 0.5em; }
 td { background: #f5f5f5; }
@@ -144,7 +148,7 @@ tr.even td { background: #f0f0f0; }
 tfoot { font-style: italic; }
 caption { font-weight: bold; padding-left: 0.2em; padding-bottom: 1em; text-align: left; }
 table th { white-space: nowrap; }
-.table { padding-right: 20px; }
+
 
 /*_______________________GRID________________________________*/
 
