--- a/portal/src/main/webapp/theme/basic/css/screen.css
+++ b/portal/src/main/webapp/theme/basic/css/screen.css
@@ -43,10 +43,12 @@ table caption {
 }
 
 #results table, #itemMetaData table {
+
     width: 100%;
 }
 
 #results table td {
+    background: transparent;
     vertical-align: top;
 }
 
@@ -65,6 +67,17 @@ table caption {
 #results #img-full img {
     -moz-box-shadow:3px 3px 4px #BBBBBB;
     border:4px solid #FFFFFF;
+}
+
+#result .brief-content-container {
+    min-height:75px;
+    padding:0.5em;
+}
+
+#results ul {
+    list-style-type:none;
+    margin:0;
+    padding:0;
 }
 
 
