--- a/portal/src/main/webapp/theme/basic/css/screen.css
+++ b/portal/src/main/webapp/theme/basic/css/screen.css
@@ -1,18 +1,48 @@
 
 /* GLOBAL ***********************************/
 
+body {
+    margin: 1em;
+}
+
+a:link
+{
+    color: #0071BC;
+}
+
+a:visited {
+    color: #446479;
+}
+
 table caption {
     display: none;
+}
+
+.inner {
+    padding: .5em;
+}
+
+/* HOME *************************************/
+
+#home {
+    text-align: center;
+}
+
+/* BRANDING *********************************/
+
+header#branding {
+    /*text-align: center;*/
 }
 
 /* USERBAR **********************************/
 
 #userBar {
-    margin: 1em 0 0 0;
+    background: #0071BC;
+    color: #e5e5e5;
     text-align: right;
 }
 #userBar ul {
-    float: right;
+    margin: 0;
 }
 #userBar ul li {
     display: inline;
@@ -24,17 +54,78 @@ table caption {
     margin: 0 1em;
 }
 
+#userBar a:link,
+#userBar a:visited {
+    color: #fff;
+}
+
+
 /* ADMINBLOCK ********************************/
+
+#adminBlock table {
+    float: right;
+}
 
 #adminBlock table tr {
     display: inline;
 }
 
+td .ui-icon {
+    float: left;
+}
+
 /* SEARCH ************************************/
+
+#search {
+    background: #e5e5e5;
+    height: 65px;
+    line-height: 65px;
+}
+
+#search form,
+#search fieldset {
+    margin: 0;
+    padding: 0;
+}
 
 #search legend {
     display: none;
 }
+
+#search nav {
+    display: inline;
+}
+
+#search input[type='search']{
+    border:1px solid #CCCCCC;
+    height:20px;
+    width:350px;
+}
+
+/* QUERY BREADCRUMBS **************************/
+
+#nav_query_breadcrumbs {
+    background:none repeat scroll 0 0 #CCE0F1;
+}
+
+#nav_query_breadcrumbs h4 {
+    margin: 0;
+}
+
+/* RESULT COUNT *******************************/
+
+#result_count {
+    height: 32px;
+    line-height: 32px;
+}
+
+/* RESULT PAGINATION **************************/
+
+nav.pagination {
+    margin: .5em 0 1em 0;
+    height: 32px;
+}
+
 
 /* RESULTS ************************************/
 
@@ -43,41 +134,165 @@ table caption {
 }
 
 #results table, #itemMetaData table {
-
+    margin: 0;
     width: 100%;
 }
 
-#results table td {
+#results table.results td {
     background: transparent;
     vertical-align: top;
+    padding: 0;
 }
 
-#results .brief-thumb-container,
-#results .brief-thumb-container-listview,
-#results #img-full {
+.results .brief-thumb-container,
+.results .brief-thumb-container-listview,
+.results #img-full {
     background:none repeat scroll 0 0 #E5E5E5;
     overflow:hidden;
     padding:0.5em;
     text-align:center;
 }
 
-#results .brief-thumb-container img,
-#results .brief-thumb-container-listview img,
-#results .related-thumb-container img,
-#results #img-full img {
+.results .brief-thumb-container img,
+.results .brief-thumb-container-listview img,
+.results .related-thumb-container img,
+#itemImage img    
+{
     -moz-box-shadow:3px 3px 4px #BBBBBB;
     border:4px solid #FFFFFF;
 }
 
-#result .brief-content-container {
+.results .brief-content-container {
     min-height:75px;
-    padding:0.5em;
+    padding:1em 0.5em;
 }
 
-#results ul {
+.results h6 {
+    margin: 0;
+}
+
+.results ul {
     list-style-type:none;
     margin:0;
     padding:0;
 }
+
+.results ul li {
+    color:#555555;
+    line-height:1.25em;
+    margin:0;
+    padding:0;
+}
+
+/* ITEM (FULL VIEW) *****************************/
+
+#itemImage {
+    background:#e5e5e5;
+    text-align: center;
+}
+
+#itemMetaData table td, #itemMetaData table th {
+    background: transparent;
+}
+
+#itemMetaData table th {
+    font-weight: bold;
+    text-align: right;
+}
+
+table .item {
+    margin: 1em 0;
+    display: block;
+}
+
+/* JQUERY UI BUTTONS ****************************/
+
+/* UI Button styles */
+.fg-button {
+    outline: 0;
+    margin: 0 4px 0 0;
+    padding: .35em 0.5em;
+    text-decoration: none !important;
+    cursor: pointer;
+    position: relative;
+    text-align: center;
+    text-transform: uppercase;
+    zoom: 1;
+    /*color: #cc6600;*/
+}
+
+.fg-button .ui-icon {
+    position: absolute;
+    top: 50%;
+    margin-top: -8px;
+    left: 50%;
+    margin-left: -8px;
+}
+
+a.fg-button {
+    float: left;
+}
+
+/* remove extra button width in IE */
+button.fg-button, input.fg-button {
+    width: auto;
+    overflow: visible;
+}
+
+.fg-button-icon-left {
+    padding-left: 2.1em;
+}
+
+.fg-button-icon-right {
+    padding-right: 2.1em;
+}
+
+.fg-button-icon-left .ui-icon {
+    right: auto;
+    left: .2em;
+    margin-left: 0;
+}
+
+a.fg-button-icon-right .ui-icon {
+    left: auto;
+    right: .2em;
+    margin-left: 0;
+}
+button.fg-button-icon-right .ui-icon {
+     left: auto;
+    right: 1em;
+    margin-left: 0;
+}
+.fg-button-icon-solo {
+    display: block;
+    width: 8px;
+    text-indent: -9999px;
+}
+
+/* solo icon buttons must have block properties for the text-indent to work */
+
+.fg-buttonset .fg-button {
+    float: left;
+}
+
+.fg-buttonset-single .fg-button,
+.fg-buttonset-multi .fg-button {
+    margin-right: -1px;
+}
+
+.fg-toolbar {
+    padding: .15em .25em;
+    margin: 0;
+}
+
+.fg-toolbar .fg-buttonset {
+    margin-right: 1.5em;
+    padding-left: 1px;
+}
+
+.fg-toolbar .fg-button {
+    font-size: 1em;
+}
+
 
 
