--- a/portal/src/main/webapp/theme/basic/css/jquery-ui-1.8.5.custom.css
+++ b/portal/src/main/webapp/theme/basic/css/jquery-ui-1.8.5.custom.css
@@ -56,9 +56,9 @@
 
 /* Component containers
 ----------------------------------*/
-.ui-widget { font-family: ; font-size: 1.1em; }
-.ui-widget .ui-widget { font-size: 1em; }
-.ui-widget input, .ui-widget select, .ui-widget textarea, .ui-widget button { font-family: ; font-size: 1em; }
+.ui-widget { }
+.ui-widget .ui-widget { }
+.ui-widget input, .ui-widget select, .ui-widget textarea, .ui-widget button { }
 .ui-widget-content { border: 1px solid #dddddd; background: #ffffff url(images/ui-bg_flat_100_ffffff_40x100.png) 50% 50% repeat-x; color: #333333; }
 .ui-widget-content a { color: #333333; }
 .ui-widget-header { border: 1px solid #cccccc; background: #0071bc url(images/ui-bg_flat_35_0071bc_40x100.png) 50% 50% repeat-x; color: #ffffff; font-weight: bold; }
