--- a/portal/src/main/webapp/theme/basic/css/mine.css
+++ b/portal/src/main/webapp/theme/basic/css/mine.css
@@ -1,20 +1,20 @@
-h3 {
-    font-size: 1em;
-    border-bottom: 4px solid #000;
-    padding: 6px 4px;
-}
-h3.items {
-     border-bottom-color: #26a097;
-         cursor: pointer;
-}
-h3.searches {
-    border-bottom-color: #FF1493;
-        cursor: pointer;
-}
-h3.tags {
-   border-bottom-color: #888;
-       cursor: pointer;
-}
+/*h3 {*/
+    /*font-size: 1em;*/
+    /*border-bottom: 4px solid #000;*/
+    /*padding: 6px 4px;*/
+/*}*/
+/*h3.items {*/
+     /*border-bottom-color: #26a097;*/
+         /*cursor: pointer;*/
+/*}*/
+/*h3.searches {*/
+    /*border-bottom-color: #FF1493;*/
+        /*cursor: pointer;*/
+/*}*/
+/*h3.tags {*/
+   /*border-bottom-color: #888;*/
+       /*cursor: pointer;*/
+/*}*/
 
 .tbl-list .item-img {
     width: 40px;
