--- a/portal/src/main/webapp/theme/basic/css/screen.css
+++ b/portal/src/main/webapp/theme/basic/css/screen.css
@@ -34,7 +34,7 @@ a:visited.disabled {
 }
 
 
-#home #news {
+#home #information {
     text-align: left;
     margin-top: 1em;
 }
@@ -274,6 +274,16 @@ table .item {
     display: block;
 }
 
+/* SAVED ITEMS **********************************/
+
+#savedItems {
+    margin: 1em 0 0 0;
+}
+
+#savedItems table {
+    width: 100%;
+}
+
 /* JQUERY UI BUTTONS ****************************/
 
 /* UI Button styles */
@@ -361,6 +371,12 @@ button.fg-button-icon-right .ui-icon {
 
 .fg-toolbar .fg-button {
     font-size: 1em;
+}
+/* FOOTER ******************************/
+
+footer {
+    /*background: #eaeaea;*/
+    border: 1px solid #ccc;
 }
 
 
