--- a/portal/src/main/webapp/theme/basic/css/screen.css
+++ b/portal/src/main/webapp/theme/basic/css/screen.css
@@ -231,6 +231,7 @@ h4.active:hover {
 }
 
 .toggle_container {
+    background: url(../images/bg-gradient.gif) repeat-x top left;
 	margin: 0 0 5px;
 	padding: 0;
 	overflow: hidden;
