AllFieldBean fully-qualified name as first parameter of SipCreatorGUI

--- a/sip-creator/src/main/jnlp/template.vm
+++ b/sip-creator/src/main/jnlp/template.vm
@@ -19,6 +19,7 @@
         $dependencies
     </resources>
     <application-desc main-class="$mainClass">
+        <argument>??? AllFieldBean fully-qualified ???</argument>
         <argument>??? MetaRepo submit URL ???</argument>
     </application-desc>
 </jnlp>
