--- a/portal/src/main/webapp/theme/basic/css/screen.css
+++ b/portal/src/main/webapp/theme/basic/css/screen.css
@@ -261,30 +261,49 @@ h4.active:hover {
     background: url(../images/togglero.gif) no-repeat 0 8px;
 }
 
-.toggle_container {
+.facets_container {
     /*background: url(../images/bg-gradient.png) repeat-x top left;*/
 	margin: 0 0 5px;
 	padding: 0;
-	overflow: hidden;
+	/*overflow: hidden;*/
 	clear: both;
+    max-height: 300px;
+    overflow-x: hidden;
+    overflow-y: auto;
 }
 
-.toggle_container table td {
+.facets_container table td {
     background: transparent;
-        font-size: .85em
+    /*font-size: .85em;*/
+    vertical-align: top;
 }
 
-.toggle_container .add {
-    background:url("../images/toggle_plus.gif") no-repeat scroll left top transparent;
-    height:32px;
-    padding:0 0 0 16px;
+.facets_container a:link, .facets_container a:visited {
+    text-decoration: none;
 }
-.toggle_container .remove {
-    background:url("../images/toggle_minus.gif") no-repeat scroll left top transparent;
+
+.facets_container a:hover {
+    text-decoration: underline;
+}
+
+.facets_container .add {
+    background:url("../images/toggle_plus.gif") no-repeat scroll  0 3px transparent;
+    /*height:32px;*/
+    padding:0 0 0 16px;
+    float: left;
+}
+.facets_container .remove {
+    background:url("../images/toggle_minus.gif") no-repeat scroll 0 3px transparent;
     color:#555555;
-    font-weight:700;
+    /*font-weight:700;*/
     padding:0 0 0 16px;
     text-decoration:none;
+    float: left;
+}
+
+.facets_container .add span, .facets_container .remove span {
+    text-decoration: none;
+    color: #999;
 }
 
 
