Norvegiana ... fulldoc image link turned off Login via ajax Register-request not yet via ajax
Merge branch 'master' of github.com:delving/norvegiana into norvegiana_master

Conflicts:
	portal/src/main/resources/i18n/messages_en.properties
	portal/src/main/resources/i18n/messages_no.properties
	portal/src/main/webapp/WEB-INF/templates/theme/basic/brief-doc-window.ftl

--- a/portal/src/main/webapp/theme/basic/css/reset-text-grid.css
+++ b/portal/src/main/webapp/theme/basic/css/reset-text-grid.css
@@ -38,9 +38,9 @@ body {
 	font: 13px/1.5 Arial, Helvetica, 'Liberation Sans', FreeSans, sans-serif;
 }
 
-a:focus {
-	outline: 1px dotted invert;
-}
+/*a:focus {*/
+	/*outline: 1px dotted invert;*/
+/*}*/
 
 hr {
 	border: 0 #ccc solid;
