major theme changes

--- a/portal/src/main/webapp/theme/basic/css/screen.css
+++ b/portal/src/main/webapp/theme/basic/css/screen.css
@@ -2,7 +2,7 @@
 /* GLOBAL ***********************************/
 
 body {
-    margin: 1em;
+    background: #bbbbb0;
 }
 
 a:link
@@ -27,38 +27,89 @@ a:visited.disabled {
     color: #ccc !important;
 }
 
+table { border-collapse: separate; border-spacing: 1px; text-align: left; }
+th { font-size: 1.1em; font-weight: normal; background: #ddddd0; }
+th, td { padding: 0.4em 0.9em 0.4em 0.5em; }
+td { background: #fff; }
+tr.even td { background: #eeeee0; }
+tr.odd td {background: #f0f0f0;}
+tfoot { font-style: italic; }
+caption { font-weight: bold; padding-left: 0.2em; padding-bottom: 1em; text-align: left; }
+table th { white-space: nowrap; }
+
 .centered {
     text-align: center;
 }
 
-/* HOME *************************************/
-
-#home {
-    text-align: center;
-    display: block;
+.container_12 {
+    position: relative;
+    background: #fff;
+    overflow: hidden;
 }
 
+/* MESSAGES *********************************/
 
-#home #information {
+#messages {
+    display: none;
+    position: absolute;
+    top: 0px;
+    text-align: center;
+    z-index: 1000;
+	-webkit-border-radius:  0 0 5px 5px;
+	-moz-border-radius:    0 0 5px 5px;
+	border-radius:   0 0 5px 5px;
+    -moz-box-shadow: 0 0 5px 5px #6699cc;
+    -webkit-box-shadow: 0 0 5px 5px #6699cc;
+    box-shadow: 0 0 5px 5px #6699cc;
+}
+#messages .message {
+    background: #fff;
+    border-top: none;
     text-align: left;
-    margin-top: 1em;
+    padding: 1em;
+	-webkit-border-radius: 0 0 5px 5px;
+	-moz-border-radius: 0 0 5px 5px;
+	border-radius: 0 0 5px 5px;
+}
+#messages.success {
+    -moz-box-shadow: 0 0 5px 5px #669933;
+    -webkit-box-shadow: 0 0 5px 5px #669933;
+    box-shadow: 0 0 5px 5px #669933;
+}
+#messages.fail {
+    -moz-box-shadow: 0 0 5px 5px #993333;
+    -webkit-box-shadow: 0 0 5px 5px #993333;
+    box-shadow: 0 0 5px 5px #993333;
 }
 
 /* BRANDING *********************************/
 
-div#branding {
-    text-align: center;
+img#branding {
+    position: absolute;
+    top: 0px;
+    left: 0px;
 }
 
-div#branding img {
-   margin: 0 .25em 0 0;
+div#header {
+    background: #336699 url(../images/bg-gradient-blue.png) repeat-x 0 0;
+    background: -moz-linear-gradient(100% 100% 90deg, #81aad0, #336699);
+    background: -webkit-gradient(linear, 0% 0%, 0% 100%, from(#336699), to(#81aad0));
+    height: 130px;
 }
+
+div#header h1 {
+    color: #fff;
+    padding: 0;
+    margin: 0 0 0 200px;
+}
+
+/* HOME *************************************/
 
 /* USERBAR **********************************/
 
 #userBar {
-    background: #0071BC;
-    color: #e5e5e5;
+    background: #ff9900;
+    color: #fff;
     text-align: right;
 }
 #userBar ul {
@@ -93,13 +144,16 @@ td .ui-icon {
 /* SEARCH ************************************/
 
 #search {
-    background: #e5e5e5;
-    /*height: 65px;*/
-    /*line-height: 65px;*/
+    background: #ddddd0 ;
+    /*height: 45px;*/
+    /*line-height: 45px;*/
+    margin-bottom: 1em;
 }
 
 #search form{
-    margin: 1.5em;
+    /*margin: 1.5em;*/
+    padding: 1em;
+    text-align: center;
 }
 #search fieldset {
     margin: 0;
@@ -120,10 +174,17 @@ td .ui-icon {
     width:350px;
 }
 
+/* MAIN SECTION  ******************************/
+
+.main {
+    margin-top: 2em;
+
+}
+
 /* QUERY BREADCRUMBS **************************/
 
 #nav_query_breadcrumbs {
-    background:none repeat scroll 0 0 #CCE0F1;
+    background:none repeat scroll 0 0 transparent;
 }
 
 #nav_query_breadcrumbs h4 {
@@ -170,11 +231,17 @@ nav.pagination {
     vertical-align: top;
     padding: 0;
 }
-
+.results {
+    background: #ffffff;
+    /*border: 1px solid #bbbbb0;*/
+    /*-webkit-border-radius: 10px 10px 10px 10px;*/
+	/*-moz-border-radius:    10px 10px 10px 10px;*/
+	/*border-radius: 10px 10px 10px 10px;*/
+}
 .results .brief-thumb-container,
 .results .brief-thumb-container-listview,
 .results #img-full {
-    background:none repeat scroll 0 0 #E5E5E5;
+    background:none repeat scroll 0 0 #f1f1f1;
     overflow:hidden;
     padding:0.5em;
     text-align:center;
@@ -238,10 +305,10 @@ nav#facetList {
 h4.trigger {
     /* set border:none to over-ride jquery.ui styles for widgets*/
     /*border: none;*/
-    border-top: 1px solid #ccc;
-	margin: 0 0 .25em 0;
-	background: url(../images/togglerch.gif) no-repeat 0 8px;
-    padding: 5px 0 0 20px;
+    border-bottom: 1px solid #ccc;
+	margin: 0;
+	background: url(../images/togglerch.gif) no-repeat 5px 8px;
+    padding: 5px 0 5px 25px;
     font-size: 1em;
 }
 
@@ -251,7 +318,7 @@ h4.trigger .ui-icon {
 }
 
 h4.trigger:hover {
-   background: url(../images/togglerc.gif) no-repeat 0 8px;
+   background: url(../images/togglerc.gif) no-repeat 5px 8px;
    color: #ccc;
 }
 
@@ -261,22 +328,23 @@ h4.trigger a {
 }
 
 h4.active {
-    background: url(../images/toggleroh.gif) no-repeat 0 8px;
+    background: url(../images/toggleroh.gif) no-repeat 5px 8px;
 }
 
 h4.active:hover {
-    background: url(../images/togglero.gif) no-repeat 0 8px;
+    background: url(../images/togglero.gif) no-repeat 5px 8px;
 }
 
 .facets_container {
-    /*background: url(../images/bg-gradient.png) repeat-x top left;*/
-	margin: 0 0 5px;
-	padding: 0;
+    background: ivory;
+	margin: 0;
+	padding: 5px 0;
 	/*overflow: hidden;*/
 	clear: both;
     max-height: 300px;
     overflow-x: hidden;
     overflow-y: auto;
+    border-bottom: 1px solid #ddddd0;
 }
 
 .facets_container table td {
@@ -439,6 +507,152 @@ footer {
 }
 footer img{
     margin: 0 1em;
+}
+
+/* DEFINITION LIST .info-box */
+
+dl.info-box {
+	background: #eeeee0;
+/*
+	background: #eeeee0 url(../images/bg-gradient-grey.png) repeat-x 0 40px;
+  	background: -moz-linear-gradient(100% 100% 90deg, #fff, #eeeee0);
+  	background: -webkit-gradient(linear, 0% 0%, 0% 100%, from(#eeeee0), to(#fff ));
+*/
+	min-height: 220px;
+	-webkit-border-radius: 5px;
+	-moz-border-radius: 5px;
+	border-radius: 5px;
+	border: 1px solid #ddddd0;
+	height: 100%;
+}
+
+
+dl.info-box dt, h3.header {
+	background: #336699 url(../images/bg-gradients-50.png) repeat-x 0 0;
+	background: -moz-linear-gradient(100% 100% 90deg, #6699cc, #336699);
+  	background: -webkit-gradient(linear, 0% 0%, 0% 100%, from(#336699), to(#6699cc));
+	height: 40px;
+	line-height: 40px;
+	color: #fff;
+	font-weight: normal;
+	font-size: 1.25em;
+	text-align: center;
+	margin: 0;
+	-webkit-border-radius:  5px 5px 0 0;
+	-moz-border-radius:  5px 5px 0 0;
+	border-radius: 5px 5px 0 0;
+	border: 1px solid #fff;
+    text-shadow: 1px 1px 0 #000;
+}
+
+h3.header {
+    border: none;
+}
+
+dl.info-box dd:first-of-type {
+	padding: 10px;
+	line-height: 1.5em !important;
+	border: 1px solid #fff;
+	border-top: none;
+	border-bottom: none;
+}
+
+dl.info-box dd.link {
+	padding: 10px;
+	text-align: center;
+	border: 1px solid #fff;
+	border-top: none;
+	-webkit-border-radius:  0 0 5px 5px;
+	-moz-border-radius:  0 0 5px 5px;
+	border-radius: 0 0 5px 5px;
+	vertical-align: baseline;
+}
+
+dl.info-box .blue {
+	background-position: center 0;
+	background: #336699 url(../images/bg-gradients-50.png) repeat-x 0 0px;
+	background: -moz-linear-gradient(100% 100% 90deg, #336699, #6699cc);
+  	background: -webkit-gradient(linear, 0% 0%, 0% 100%, from(#6699cc), to(#336699));
+}
+
+dl.info-box .green {
+	background: #669933 url(../images/gradients-sprite.png) repeat-x 0 -50px;
+	background: -moz-linear-gradient(100% 100% 90deg, #336600, #669933);
+  	background: -webkit-gradient(linear, 0% 0%, 0% 100%, from(#669933), to(#336600));
+}
+
+dl.info-box .red {
+	background: #663333 url(../images/gradients-sprite.png) repeat-x 0 -100px;
+	background: -moz-linear-gradient(100% 100% 90deg, #663333, #993333);
+  	background: -webkit-gradient(linear, 0% 0%, 0% 100%, from(#993333), to(#663333));
+}
+
+dl.info-box .gold {
+	background: #f9ae40 url(../images/gradients-sprite.png) repeat-x 0 -150px;
+	background: -moz-linear-gradient(100% 100% 90deg, #f9ae40, #ffcc33);
+  	background: -webkit-gradient(linear, 0% 0%, 0% 100%, from(#ffcc33), to(#f9ae40));
+}
+dl.info-box .orange {
+	background: #ff9900 url(../images/gradients-sprite.png) repeat-x 0 -200px;
+	background: -moz-linear-gradient(100% 100% 90deg, #ff6633, #ff9900);
+  	background: -webkit-gradient(linear, 0% 0%, 0% 100%, from(#ff9900), to(#ff6633));
+}
+
+dl.info-box .brown {
+	background: #cc6600 url(../images/gradients-sprite.png) repeat-x 0 -250px;
+	background: -moz-linear-gradient(100% 100% 90deg, #cc6600, #554433);
+  	background: -webkit-gradient(linear, 0% 0%, 0% 100%, from(#554433), to(#cc6600));
+}
+
+dl.info-box .black {
+	background: #666666 url(../images/gradients-sprite.png) repeat-x 0 -300px;
+	background: -moz-linear-gradient(100% 100% 90deg, #333, #666);
+  	background: -webkit-gradient(linear, 0% 0%, 0% 100%, from(#666), to(#333));
+}
+
+
+/* SORTABLE TABLE */
+table.tablesorter {
+	/*font-family:arial;*/
+	/*background-color: #CDCDCD;*/
+	/*margin:10px 0pt 15px;*/
+	/*font-size: .85em;*/
+	width: 100%;
+	text-align: left;
+}
+table.tablesorter thead tr th, table.tablesorter tfoot tr th {
+	background-color: #ddddd0;
+	/*border: 1px solid #FFF;*/
+	/*font-size: 8pt;*/
+	/*padding: 4px;*/
+}
+table.tablesorter thead tr .header {
+	background-image: url(../images/bg.gif);
+	background-repeat: no-repeat;
+	background-position: center right;
+	cursor: pointer;
+}
+table.tablesorter tbody td {
+	/*color: #3D3D3D;*/
+	padding: 4px;
+	background-color: #FFF;
+	vertical-align: top;
+    /*font-size: 85%*/
+}
+table.tablesorter tbody tr.odd td {
+	background-color:#eeeee0;
+}
+table.tablesorter tbody tr.even td {
+	background-color:#fff;
+}
+table.tablesorter thead tr .headerSortUp {
+	background-image: url(../images/asc.gif);
+}
+table.tablesorter thead tr .headerSortDown {
+	background-image: url(../images/desc.gif);
+}
+table.tablesorter thead tr .headerSortDown, table.tablesorter thead tr .headerSortUp {
+background-color: #bbbbb0;
 }
 
 
