--- a/portal/src/main/webapp/theme/basic/css/screen.css
+++ b/portal/src/main/webapp/theme/basic/css/screen.css
@@ -3,6 +3,7 @@
 
 body {
     background: #bbbbb0;
+    color: #666666;
 }
 
 a:link
@@ -51,7 +52,7 @@ table th { white-space: nowrap; }
 
 #messages {
     display: none;
-    position: absolute;
+    position: fixed;
     top: 0px;
     text-align: center;
     z-index: 1000;
@@ -61,6 +62,7 @@ table th { white-space: nowrap; }
     -moz-box-shadow: 0 0 5px 5px #6699cc;
     -webkit-box-shadow: 0 0 5px 5px #6699cc;
     box-shadow: 0 0 5px 5px #6699cc;
+    background: #fff;
 }
 #messages .message {
     background: #fff;
@@ -76,7 +78,7 @@ table th { white-space: nowrap; }
     -webkit-box-shadow: 0 0 5px 5px #669933;
     box-shadow: 0 0 5px 5px #669933;
 }
-#messages.fail {
+#messages.fail, #messages.error {
     -moz-box-shadow: 0 0 5px 5px #993333;
     -webkit-box-shadow: 0 0 5px 5px #993333;
     box-shadow: 0 0 5px 5px #993333;
@@ -98,9 +100,12 @@ div#header {
 }
 
 div#header h1 {
+    background: transparent url(../images/header-name.png) no-repeat 0 15px;
     color: #fff;
     padding: 0;
     margin: 0 0 0 200px;
+    text-indent: -1200px;
+    height: 120px;
 }
 
 /* HOME *************************************/
@@ -206,7 +211,7 @@ td .ui-icon {
   float: right;
 }
 
-#result_view_select a:link {
+#result_view_select a:link, #result_view_select a:visited {
     text-decoration: none;
 }
 
@@ -634,7 +639,7 @@ dl.menu {
 }
 dl.menu dt {
     /*background: #bbbbb0;*/
-    border-bottom: 1px solid #666666;
+    border-bottom: 1px solid #aaaaa0;
 	height: 35px;
 	line-height: 35px;
 	/*color: #fff;*/
@@ -643,6 +648,7 @@ dl.menu dt {
 	text-align: left;
 	margin: 0;
     padding: 0 0 0 4px;
+    color: #666666;
 	/*-webkit-border-radius:  5px 5px 0 0;*/
 	/*-moz-border-radius:  5px 5px 0 0;*/
 	/*border-radius: 5px 5px 0 0;*/
@@ -651,6 +657,8 @@ dl.menu dt {
 dl.menu dd {
     border-bottom: 1px solid #ccc;
     padding: 4px 0 4px 4px;
+    clear: both;
+    height: auto;
 }
 dl.menu dd.container {
     border-bottom: none;
@@ -707,5 +715,10 @@ table.tablesorter thead tr .headerSortDown, table.tablesorter thead tr .headerSo
 background-color: #bbbbb0;
 }
 
+table.zebra tbody tr:nth-child(odd) td {
+    background-color:transparent;
+}
 
-
+table.zebra tbody tr:nth-child(even) td{
+    background-color:#eeeee0;
+}
