--- a/portal/src/main/webapp/theme/basic/css/text.css
+++ b/portal/src/main/webapp/theme/basic/css/text.css
@@ -1,5 +1,5 @@
 body {
-    font: 13px/1.5 'Lucida Grande', Helvetica, Arial, sans-serif;
+    font: 12px/1.5 'Lucida Grande', Helvetica, Arial, sans-serif;
 }
 
 a:focus {
@@ -7,22 +7,26 @@ a:focus {
 }
 
 hr {
-    border: 0 #ccc solid;
+    border: 0 #ccccc0 solid;
     border-top-width: 1px;
     clear: both;
     height: 0
 }
 
 h1 {
-    font-size: 25px
+    font-size: 2em;
+    font-weight: bold;
 }
 
 h2 {
-    font-size: 23px
+    font-size: 1.5em;
+    font-weight: bold;
 }
 
 h3 {
-    font-size: 21px
+    /*font-size: 21px*/
+    font-size: 1.25em;
+    font-weight: bold;
 }
 
 h4 {
@@ -34,7 +38,7 @@ h5 {
 }
 
 h6 {
-    font-size: 15px
+    font-size: 1em
 }
 
 ol {
