--- a/portal/src/main/webapp/theme/basic/css/screen.css
+++ b/portal/src/main/webapp/theme/basic/css/screen.css
@@ -172,7 +172,8 @@ td .ui-icon {
 #search form{
     /*margin: 1.5em;*/
     padding: 1em;
-    text-align: center;
+    /*text-align: center;*/
+    margin-left: 180px;
 }
 #search fieldset {
     margin: 0;
@@ -187,10 +188,58 @@ td .ui-icon {
     display: inline;
 }
 
-#search input[type='search']{
-    border:1px solid #CCCCCC;
-    height:20px;
-    width:350px;
+/*#search input[type='search']{*/
+    /*border:1px solid #CCCCCC;*/
+    /*height:20px;*/
+    /*width:430px;*/
+    /*padding: .25em;*/
+    /*font-size: 1.1em;*/
+    /*font-weight: bold;*/
+/*}*/
+ /*#search button#submitSimpleSearch {*/
+     /*height: 24px !important;*/
+     /*padding: .5em !important;*/
+ /*}*/
+
+/*#search form#formSimpleSearch input[type='search']{*/
+    /*height: 32px;*/
+/*}*/
+
+#formSimpleSearch input {
+    vertical-align: middle;
+    font-weight: bold;
+    font-size: 12px;
+    -moz-border-radius: 4px;
+    -webkit-border-radius: 4px;
+}
+
+#formSimpleSearch input[type="query"] {
+    width: 450px;
+    padding: 10px 95px 10px 10px;
+    background: #fff;
+    border: 1px solid #bbb;
+}
+
+#formSimpleSearch input[type="submit"] {
+    width: 80px;
+    margin-left: -87px;
+    padding: 8px;
+    border: none;
+    color: #fff;
+    background: #336699;
+    text-shadow: 0px -1px 2px rgba(0, 0, 0, .7);
+    cursor: pointer;
+    -moz-border-radius: 2px;
+    -webkit-border-radius: 2px;
+    margin-right: 1em;
+}
+
+#formSimpleSearch input[type="submit"]::-moz-focus-inner {
+    border: 0;
+}
+
+#formSimpleSearch input[type="submit"]:focus {
+    background: #333;
 }
 
 /* MAIN SECTION  ******************************/
