CMS added source-editor with syntax highlighting and indentation. Now possible to switch nicely between source and wysiwyg

--- a/portal/src/main/webapp/theme/basic/css/reset.css
+++ b/portal/src/main/webapp/theme/basic/css/reset.css
@@ -86,7 +86,7 @@ hr {
     height:1px;
     border:0;
     border-top:1px solid #cccccc;
-    margin:1em 0;
+    margin:.5em 0;
     padding:0;
 }
 
