Norvegiana Theme JqueryUI css and images color scheme

--- a/portal/src/main/webapp/theme/norvegiana/css/960-fluid.css
+++ b/portal/src/main/webapp/theme/norvegiana/css/960-fluid.css
@@ -13,9 +13,10 @@
 .container_12,
 .container_16
 {
-	width: 80%;
-	margin-left: 10%;
-	margin-right: 10%;
+	width: 74%;
+	margin-left: 13%;
+	margin-right: 13%;
+    min-width: 960px;
 }
 
 /* =Grid >> Global
