--- a/portal/src/main/webapp/theme/norvegiana/css/screen.css
+++ b/portal/src/main/webapp/theme/norvegiana/css/screen.css
@@ -14,7 +14,7 @@ body#tinymce, body#mceTemplatePreview {
 
 a:link
 {
-    color: #0071BC;
+    color: #336699;
 }
 
 a:visited {
@@ -102,41 +102,87 @@ table th { white-space: nowrap; }
 /* BRANDING *********************************/
 
 img#branding {
-    text-align: center;
+    position: absolute;
+    top: 12px;
+    left: 7px;
+    z-index: 1001;
 }
 
 div#header {
-    background: #eeeee0;
-    /*background: #336699 url(../images/bg-gradient-blue.png) repeat-x 0 0;*/
-    background: -moz-linear-gradient(100% 100% 90deg, #3b5a79, #81aad0);
-    /*background: -webkit-gradient(linear, 0% 0%, 0% 100%, from(#81aad0), to(#3b5a79));*/
-    height: 160px;
+    background: #6699cc;
     position: relative;
+    height: 100px;
+    /*border-top: 10px solid #336699;*/
 }
-
+div#header #name {
+    position: absolute;
+    bottom: 0px;
+}
 div#header h1 {
-    background: transparent url(../images/header-name.png) no-repeat 0 15px;
+    /*background: transparent url(../images/name.png) no-repeat top left;*/
     color: #fff;
     padding: 0;
-    margin: 0 0 0 200px;
+    margin: 0px;
+    font-family: Garamond, Georgia, "Times New Roman";
+    font-size: 3em;
+    letter-spacing: 3px;
+    /*margin: 0 0 0 200px;*/
     text-indent: -1200px;
-    height: 120px;
 }
 
 /* HOME *************************************/
 
+div#header.home {
+    background: #6699cc;
+    position: relative;
+    height: 250px;
 
+}
+
+
+#header.home #search {
+    background: #6699cc;
+    position: absolute;
+    bottom: 70px;
+    right: 0px;
+    -moz-border-radius: 8px;
+    -webkit-border-radius: 8px;
+    height: 100px;
+    line-height: 90px;
+    /*text-align:center;*/
+}
+
+/*#header.home #search a {*/
+    /*color: #336699;*/
+/*}*/
+
+#header.home img#branding {
+    position: absolute;
+    top: 30px;
+    left: 40px;
+    z-index: 1001;
+}
+
+div#header.home h1 {
+    /*background: transparent url(../images/name.png) no-repeat top left;*/
+    color: #fff;
+    padding: 0;
+    margin: 0px;
+    font-family: Garamond, Georgia, "Times New Roman";
+    font-size: 3em;
+    letter-spacing: 3px;
+    /*margin: 0 0 0 200px;*/
+    text-indent: -1200px;
+}
 
 /* USERBAR **********************************/
 
 #userBar {
-    background: #3b5a79;
-    /*background: -moz-linear-gradient(100% 100% 90deg, #3b5a79, #333);*/
     color: #fff;
     text-align: right;
     overflow: hidden;
-    height: 40px;
-    line-height: 40px;
+    height: 30px;
+    line-height: 30px;
 }
 #userBar ul {
     margin: 0;
@@ -148,7 +194,7 @@ div#header h1 {
 }
 #userBar select#dd_lang {
     float: right;
-    margin: 1em 0;
+    margin: .5em 1em;
 }
 
 #userBar a:link,
@@ -158,52 +204,72 @@ div#header h1 {
 
 #userBar h1 {
     font-family: Times;
-    font-size: 3em;
+    font-size: 3.25em;
     font-weight: normal;
     text-align: left;
     margin: 0;
-    letter-spacing: 2px;
-}
-
-
-/* ADMINBLOCK ********************************/
-#adminBlock {
-    /*position: absolute;*/
-    /*top: 10px;*/
-    clear: both;
-}
-#adminBlock table {
-    margin: 0;
+    letter-spacing: 4px;
 }
 
 td .ui-icon {
     float: left;
 }
 
+/* ADMINBLOCK ********************************/
+#adminBlock {
+    background: #333;
+    line-height: 20px;
+}
+
+#admin-menu {
+	background: #333;
+	/*float: left;*/
+	list-style: none;
+	margin: 0 0 0 1em;
+	padding: 0;
+	width: 100%;
+    overflow: hidden;
+}
+#admin-menu li {
+	float: left;
+	margin: 0;
+	padding: 0;
+}
+#admin-menu a {
+	color: #ccc;
+	display: block;
+	float: left;
+	margin: 0;
+	padding: 4px 12px;
+	text-decoration: none;
+}
+#admin-menu a:hover,
+#admin-menu a.active{
+    background: #6699cc;
+	color: #fff;
+	padding-bottom: 4px;
+}
 /* SEARCH ************************************/
 
 #search {
-    background: #3b5a79 ;
-    background: -moz-linear-gradient(100% 100% 180deg, #3b5a79, transparent);
-    /*height: 45px;*/
-    /*line-height: 45px;*/
-    /*margin-bottom: 1em;*/
+    background: #336699 ;
     position: absolute;
     bottom: 0px;
-    text-align: center;
-    width: 100%;
-
+    right: 0px;
+    -moz-border-radius: 8px 8px 0 0;
+    -webkit-border-radius: 8px 8px 0 0;
+    border-radius: 8px 8px 0 0;
+    /*width: 100%;*/
+    
 }
+
 
 #search a {
     color: #fff;
 }
 
-#search form{
-    /*margin: 1.5em;*/
+#search form{   
     padding: .5em;
-    /*text-align: center;*/
-    margin-left: 180px;
 }
 #search fieldset {
     margin: 0;
@@ -241,6 +307,7 @@ td .ui-icon {
     font-size: 12px;
     -moz-border-radius: 4px;
     -webkit-border-radius: 4px;
+    border-radius: 4px;
 }
 
 #formSimpleSearch input[type="query"] {
@@ -257,10 +324,11 @@ td .ui-icon {
     border: none;
     color: #fff;
     background: #336699;
-    text-shadow: 0px -1px 2px rgba(0, 0, 0, .7);
+    /*text-shadow: 0px -1px 2px #000000;*/
     cursor: pointer;
     -moz-border-radius: 2px;
     -webkit-border-radius: 2px;
+    border-radius: 2px;
     margin-right: 1em;
 }
 
@@ -275,12 +343,12 @@ td .ui-icon {
 /* MAIN SECTION  ******************************/
 
 .main {
-    margin-top: 2em;
+    margin-top: 1em;
 
 }
 
 section[role="main"], section[role="complementary"]{
-    margin-top: 2em;
+    margin-top: 1.5em;
 }
 
 /* QUERY BREADCRUMBS **************************/
@@ -492,6 +560,13 @@ h4.active:hover {
 
 #itemImage {
     text-align: center;
+    float: left;
+    width: 40%;
+}
+
+#itemMetaData {
+    float: left;
+    width: 60%;
 }
 
 #itemMetaData table td, #itemMetaData table th {
@@ -544,6 +619,10 @@ table .item {
 
 a.fg-button {
     float: left;
+}
+
+a.fg-button:active, a.fg-button.ui-state-active {
+    color: #fff;
 }
 
 /* remove extra button width in IE */
@@ -610,6 +689,7 @@ button.fg-button-icon-right .ui-icon {
 footer {
     margin: 1em 0 0 0;
     text-align: center;
+    /*border-bottom: 10px solid #6699cc;*/
 }
 footer img{
     margin: 0 1em;
