--- a/portal/src/main/webapp/theme/norvegiana/css/screen.css
+++ b/portal/src/main/webapp/theme/norvegiana/css/screen.css
@@ -103,13 +103,14 @@ table th { white-space: nowrap; }
 
 img#branding {
     position: absolute;
-    top: 12px;
-    left: 7px;
+    top: 0px;
+    left: 5px;
     z-index: 1001;
 }
 
 div#header {
     background: #6699cc;
+    /*background: #6699cc url(../images/bg-header-left.png) no-repeat top left;*/
     position: relative;
     height: 100px;
     /*border-top: 10px solid #336699;*/
@@ -128,52 +129,12 @@ div#header h1 {
     letter-spacing: 3px;
     /*margin: 0 0 0 200px;*/
     text-indent: -1200px;
+    
 }
 
 /* HOME *************************************/
 
-div#header.home {
-    background: #6699cc;
-    position: relative;
-    height: 250px;
 
-}
-
-
-#header.home #search {
-    background: #6699cc;
-    position: absolute;
-    bottom: 70px;
-    right: 0px;
-    -moz-border-radius: 8px;
-    -webkit-border-radius: 8px;
-    height: 100px;
-    line-height: 90px;
-    /*text-align:center;*/
-}
-
-/*#header.home #search a {*/
-    /*color: #336699;*/
-/*}*/
-
-#header.home img#branding {
-    position: absolute;
-    top: 30px;
-    left: 40px;
-    z-index: 1001;
-}
-
-div#header.home h1 {
-    /*background: transparent url(../images/name.png) no-repeat top left;*/
-    color: #fff;
-    padding: 0;
-    margin: 0px;
-    font-family: Garamond, Georgia, "Times New Roman";
-    font-size: 3em;
-    letter-spacing: 3px;
-    /*margin: 0 0 0 200px;*/
-    text-indent: -1200px;
-}
 
 /* USERBAR **********************************/
 
@@ -404,6 +365,7 @@ nav.pagination {
     background: transparent;
     vertical-align: top;
     padding: 0;
+
 }
 .results {
     background: #ffffff;
@@ -561,12 +523,12 @@ h4.active:hover {
 #itemImage {
     text-align: center;
     float: left;
-    width: 40%;
+    width: 45%;
 }
 
 #itemMetaData {
     float: left;
-    width: 60%;
+    width: 55%;
 }
 
 #itemMetaData table td, #itemMetaData table th {
@@ -689,6 +651,9 @@ button.fg-button-icon-right .ui-icon {
 footer {
     margin: 1em 0 0 0;
     text-align: center;
+    display: block;
+    min-height: 50px;
+    /*overflow:hidden;*/
     /*border-bottom: 10px solid #6699cc;*/
 }
 footer img{
@@ -893,12 +858,17 @@ table.tablesorter thead tr .headerSortDown, table.tablesorter thead tr .headerSo
 background-color: #bbbbb0;
 }
 
+table.zebra thead tr th {
+    background-color: #6699cc;
+    color: #fff;
+}
+
 table.zebra tbody tr:nth-child(odd) td {
-    background-color:transparent;
+    background-color:#eee;
 }
 
 table.zebra tbody tr:nth-child(even) td{
-    background-color:#eeeee0;
+    background-color: transparent;
 }
 
 #editor-controls {
