--- a/portal/src/main/webapp/theme/norvegiana/css/screen.css
+++ b/portal/src/main/webapp/theme/norvegiana/css/screen.css
@@ -589,10 +589,27 @@ button.fg-button-icon-right .ui-icon
 	margin-right:-1px;
 }
 
+.fg-buttonset {
+    float: left;
+}
+
+button.fg-button-icon-left .ui-icon {
+    left: 0.2em;
+    margin-left: 0;
+    right: auto;
+    padding-left: 20px;
+}
+button.fg-button-icon-right .ui-icon {
+    left: auto;
+    margin-left: 0;
+    right: 0.2em;
+}
+
+
 .fg-toolbar
 {
 	margin:0;
-	padding:.15em .25em;
+	padding:.25em;
 }
 
 .fg-toolbar .fg-buttonset
@@ -908,7 +925,8 @@ body#tinymce,body#mceTemplatePreview,.results,td
 	color:#fff;
 }
 
-td .ui-icon,#result_count,a.fg-button,.fg-buttonset .fg-button
+/*td .ui-icon,#result_count,a.fg-button,.fg-buttonset .fg-button*/
+td .ui-icon, .fg-button
 {
 	float:left;
 }
